k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infocep-backend
  namespace: infocep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infocep-backend
  template:
    metadata:
      labels:
        app: infocep-backend
    spec:
      containers:
        - name: backend
          image: analistadecodigo/infocep-backend:v0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
